[gd_scene load_steps=3 format=3 uid="uid://cv4jhia8p3bt5"]

[ext_resource type="Script" path="res://Scenes & Scripts/Main Scene/UI/tutorial.gd" id="1_721tv"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_mmfa7"]

[node name="Tutorial" type="TextureRect"]
offset_left = 69.0
offset_top = 160.0
offset_right = 147.0
offset_bottom = 233.0
texture = SubResource("PlaceholderTexture2D_mmfa7")
script = ExtResource("1_721tv")

[node name="TutorialPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = 79.0
offset_right = 294.0
offset_bottom = 329.0

[node name="TutorialTooltip" type="RichTextLabel" parent="TutorialPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 64.0
offset_right = 286.0
offset_bottom = 250.0
theme_override_font_sizes/normal_font_size = 15

[node name="TutorialImageOne" type="TextureRect" parent="TutorialPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 11.0
offset_right = 66.0
offset_bottom = 51.0
expand_mode = 2

[node name="ImageTooltipOne" type="RichTextLabel" parent="TutorialPanel"]
layout_mode = 0
offset_left = 68.0
offset_top = 22.0
offset_right = 145.0
offset_bottom = 62.0
theme_override_font_sizes/normal_font_size = 10

[node name="TutorialImageTwo" type="TextureRect" parent="TutorialPanel"]
layout_mode = 0
offset_left = 157.0
offset_top = 12.0
offset_right = 207.0
offset_bottom = 52.0
expand_mode = 2

[node name="ImageTooltipTwo" type="RichTextLabel" parent="TutorialPanel"]
layout_mode = 0
offset_left = 208.0
offset_top = 22.0
offset_right = 285.0
offset_bottom = 62.0
theme_override_font_sizes/normal_font_size = 10

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
